# tron

./: .gitignore  .gitmodules  .project.json  AGENTS.md  Cargo.toml  TODO.md  calibration.json
fleeting/: 3y01.md  4o8q.md  4oph.md  5buq.md  60ip.md  66p8.md  7f3n.md  7z3l.md  8f1d.md  ai2t.md  aka7.md  b1g2.md  bc2k.md  bj61.md  ckun.md  dk1m.md  hxoe.md  iflm.md  jbr5.md  k7uu.md  kiqx.md  new1.md  q09k.md  qj5o.md  ry1x.md  s7cl.md  sgao.md  t738.md  vwc5.md  vwmc.md  wi7n.md
legacy/prototype/: Cargo.toml
legacy/prototype/src/: ir_emitter.rs
legacy/prototype/src/calib/: checkerboard.rs  mod.rs  stereo.rs
legacy/prototype/src/camera/: v4l.rs
legacy/prototype/src/depth/: mod.rs
legacy/prototype/src/diagnostics/: mod.rs
legacy/prototype/src/gfx/: texture.rs
legacy/prototype/src/gfx/cube/: mod.rs
legacy/prototype/src/landmarker/: mediapipe.rs  mock.rs  mod.rs
legacy/prototype/src/proximity/: mod.rs
legacy/prototype/src/roi/: mod.rs
legacy/prototype/src/stream/: frame.rs  mod.rs  process.rs  render.rs
legacy/prototype/src/stream/decode/: mjpeg.rs  mod.rs
legacy/prototype/src/types/: mod.rs
models/: README.md
models/hand_detector/: model.onnx
models/hand_landmark/: hand_landmark.onnx
notes/: 3gld.md  3y01.md  4o8q.md  4sy8.md  50ix.md  6179.md  7hec.md  aka7.md  b1g2.md  ckun.md  dd8d.md  dg9k.md  dk1m.md  dsdl.md  gd8l.md  h6k9.md  i4yu.md  j3m5.md  k7uu.md  kiqx.md  mpj7.md  omqw.md  pbe4.md  t738.md  vwmc.md  w3dr.md
notes/.zk/: config.toml
src/: calib.rs  camera.rs  filter.rs  gestures.rs  gfx.rs  main.rs  pipeline.rs  proximity.rs  refiners.rs  shader.wgsl  skeleton_render.rs  types.rs
src/calib/: checkerboard.rs  mod.rs  stereo.rs
src/camera/: mod.rs  v4l.rs
src/diagnostics/: page.rs  server.rs  state.rs
src/filter/: mod.rs
src/gestures/: mod.rs
src/gfx/: depth.rs  mod.rs  render.rs  setup.rs
src/gfx/cube/: mesh.rs  shader.wgsl
src/gfx/skeleton/: geometry.rs  label.rs  mod.rs  shader.wgsl
src/inference/: mod.rs
src/landmarker/: mediapipe.rs  mock.rs  mod.rs
src/pipeline/: mod.rs
src/refiners/: mod.rs
src/roi/: detector.rs  ir.rs  mod.rs  track.rs
src/skeleton_render/: mod.rs
src/stream/: frame.rs  mod.rs  process.rs  render.rs
src/stream/decode/: mjpeg.rs  mod.rs
src/stream/source/: mod.rs  v4l.rs
src/types/: mod.rs
tools/: camera-probe.sh  google-hand-landmarker.py  probe_camera_exposure.py
tools/tof-teensy-arduino/: README.md
tools/tof-teensy-arduino/tof_bridge/: tof_bridge.ino
tools/win/: hello_camera_probe.cpp
tron/: Cargo.toml
tron-api/: Cargo.toml
tron-api/src/: calib.rs  capture.rs  decode.rs  depth.rs  event.rs  frame.rs  gesture.rs  lib.rs  pointer.rs  present.rs  process.rs  projection.rs  render.rs  roi.rs  source.rs  stream.rs  view_buffer.rs
tron-core/: Cargo.toml
tron-core/examples/: inspect_onnx.rs  test_landmarks.rs  test_opencv.rs
tron-core/src/: filter.rs  gesture.rs  lib.rs  pointer.rs  projection.rs  sink.rs  transform.rs  view.rs
tron-core/src/calib/: checkerboard.rs  mod.rs
tron-core/src/capture/: file.rs  lit_ir.rs  mod.rs  stereo.rs  uvcm_metadata.rs  v4l.rs  v4l_control.rs
tron-core/src/decode/: mjpeg.rs  mod.rs
tron-core/src/pipeline/: mod.rs
tron-core/src/pointer/: absolute.rs  joystick.rs  relative.rs
tron-core/src/pointer/predictor/: kinematic.rs  minimum_jerk.rs  mod.rs  one_euro.rs  velocity.rs
tron-core/src/present/: checkerboard_overlay.rs  http.rs  line_overlay.rs  mod.rs  roi_overlay.rs  text.rs
tron-core/src/present/wgpu/: mod.rs  shader.wgsl
tron-core/src/process/: frame_diff.rs  landmark_filter.rs  landmark_velocity.rs  mod.rs  one_euro.rs  one_euro_landmarks.rs
tron-core/src/projection/: checkerboard.rs  hand.rs  map.rs  mod.rs  roi.rs  source.rs
tron-core/src/render/: checkerboard_overlay.rs  hand_landmarks_overlay.rs  hand_velocity_overlay.rs  http.rs  line_overlay.rs  mod.rs  roi_overlay.rs  text.rs  thick_line_overlay.rs
tron-core/src/render/wgpu/: mod.rs  surface.rs
tron-core/src/roi/: camera.rs  hand.rs  landmark.rs  mod.rs  opencv.rs
tron-core/src/roi/mediapipe/: landmark.rs  mod.rs  palm.rs
tron-core/src/sensor/: mod.rs  vl53l5cx_serial.rs
tron-core/src/transform/: fps_throttle_source.rs  frame_projection.rs  mirrored_source.rs  mod.rs  projected_source.rs
tron/src/: capture.rs  config.rs  face_auth.rs  latest.rs  lib.rs
tron/src/calibration/: check.rs  latency.rs  main.rs  presenter.rs  renderer.rs  window.rs
tron/src/collector/: aggregate.rs  camera_roi.rs  main.rs  persistence.rs  pipeline.rs  renderer.rs  sink.rs  window.rs
tron/src/controller/: capture.rs  linux_pointer.rs  main.rs  pipeline.rs  pointer_sink.rs  renderer.rs  runtime.rs  window.rs
tron/src/ir_emitter/: main.rs
tron/src/playground/: camera_roi.rs  exposure_roi.rs  latency.rs  latest.rs  main.rs  metadata.rs  pipeline.rs  presenter.rs  renderer.rs  window.rs
tron/src/roi/: main.rs  overlay.rs  roi.rs  sweep.rs  uvc_step.rs  window.rs
