[workspace]
members = ["tron-api", "tron-core", "tron"]
resolver = "3"

[workspace.package]
version = "0.1.0"
edition = "2024"

[workspace.dependencies]
anyhow = "1"
clap = { version = "4.6.1", features = ["derive"] }
tron-api = { path = "tron-api" }
tron-core = { path = "tron-core" }

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3
