[workspace]
members = ["tron-api", "tron-core", "tron"]
resolver = "3"

[workspace.package]
version = "0.1.0"
edition = "2024"

[workspace.dependencies]
anyhow = "1"
clap = { version = "4.6.1", features = ["derive"] }
tron-api = { path = "tron-api" }
tron-core = { path = "tron-core" }
bytemuck = { version = "1", features = ["derive"] }
pollster = "0.3"
rustix = { version = "1.1", default-features = false, features = ["std", "fs"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
wgpu = "22"
winit = "0.30"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3
