[workspace]
members = ["tron-api", "tron-core", "tron"]
resolver = "3"

[workspace.package]
version = "0.1.0"
edition = "2024"

[workspace.dependencies]
anyhow = "1"
async-trait = "0.1"
clap = { version = "4.6.1", features = ["derive"] }
evdev = "0.13.2"
tron-api = { path = "tron-api" }
tron-core = { path = "tron-core" }
bytemuck = { version = "1", features = ["derive"] }
pollster = "0.3"
rustix = { version = "1.1", default-features = false, features = ["std", "fs"] }
serde = { version = "1", features = ["derive", "rc"] }
serde_json = "1"
tokio = { version = "1", features = ["rt", "rt-multi-thread", "sync", "time", "macros", "io-util"] }
tokio-serial = "5"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
ndarray = "0.17.2"
opencv = { version = "0.98.2", default-features = false }
glam = { version = "0.30", features = ["serde", "bytemuck", "zerocopy"] }
wgpu = "22"
winit = "0.30"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3
