[package]
name = "tron-core"
version.workspace = true
edition.workspace = true

[dependencies]
anyhow.workspace = true
bytemuck.workspace = true
opencv = { workspace = true, features = ["clang-runtime", "imgproc"] }
ort = { version = "2.0.0-rc.12", features = ["download-binaries", "ndarray"] }
serde.workspace = true
serde_json.workspace = true
tron-api.workspace = true
turbojpeg = { version = "1.4", default-features = false, features = ["pkg-config", "require-simd"] }
v4l = "0.14"
wgpu.workspace = true
