[package]
name = "tron"
version.workspace = true
edition.workspace = true

[dependencies]
anyhow.workspace = true
bytemuck.workspace = true
clap.workspace = true
pollster.workspace = true
tron-api.workspace = true
tron-core.workspace = true
wgpu.workspace = true
winit.workspace = true

[[bin]]
name = "playground"
path = "src/playground/main.rs"

[[bin]]
name = "calibration"
path = "src/calibration/main.rs"

[[bin]]
name = "roi-control"
path = "src/roi/main.rs"
