[package]
name = "tron"
version.workspace = true
edition.workspace = true

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
bytemuck.workspace = true
clap.workspace = true
pollster.workspace = true
rustix.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tokio.workspace = true
tron-api.workspace = true
tron-core.workspace = true
wgpu.workspace = true
winit.workspace = true

[[bin]]
name = "playground"
path = "src/playground/main.rs"

[[bin]]
name = "calibration"
path = "src/calibration/main.rs"

[[bin]]
name = "collector"
path = "src/collector/main.rs"

[[bin]]
name = "roi-control"
path = "src/roi/main.rs"

[[bin]]
name = "ir-emitter-control"
path = "src/ir_emitter/main.rs"
